--- a/index.html
+++ b/index.html
@@ -27,6 +27,8 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 			<div class="agileits-top">
 				<form action="#" method="post">
 					<input id="username" class="text" type="text" name="Username" placeholder="Felhasználónév" required="">
+					<br/>
+					<label id="userCheck"></label>
 					<input class="text email" type="email" name="email" placeholder="Email" required="">
 					<input class="text" type="password" name="password" placeholder="Jelszó" required="">
 					<div class="wthree-text">
