--- a/index.html
+++ b/index.html
@@ -26,12 +26,21 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 		<div class="main-agileinfo">
 			<div class="agileits-top">
 				<form action="#" method="post">
-					<input id="username" class="text" type="text" name="Username" placeholder="Felhasználónév" required="">
-					<br/>
 					<label id="userCheck"></label>
-					<input class="text email" type="email" name="email" placeholder="Email" required="">
-					<input class="text" type="password" name="password" placeholder="Jelszó" required="">
+					<input id="username" class="text" type="text" name="Username" placeholder="Felhasználónév" required="">
+
+					
+					<input id="email" class="text email" type="email" name="email" placeholder="Email" required="">
+					<label id="emailCheck"></label>
+
+					<input id="passwd" class="text" type="password" name="password" placeholder="Jelszó" required="">
+					<label id="passwdCheck"></label>
+
+					<input id="rePasswd" class="text" type="password" name="password" placeholder="Jelszó" required="" style="margin-top: 30px;">
+					<label id="rePasswdCheck" style="margin-bottom: 20px;"></label>
+					<br/>
 					<div class="wthree-text">
+						<br/>
 						<label class="anim">
 							<input type="checkbox" class="checkbox" required="">
 							<span>Elfogadom a felhasználási feltételeket</span>
