--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 						</label>
 						<div class="clear"> </div>
 					</div>
-					<input type="submit" value="REGISZTRÁCIÓ">
+					<input id="btn" type="submit" value="REGISZTRÁCIÓ">
 				</form>
 				<p>Nincs még fiókod? <a href="#"> Bejelentkezés!</a></p>
 			</div>
